--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,2 +1,2 @@
 [build]
-command = "cd backend && npm install && npm start"
+  command = "mv frontend temp_frontend && cd backend && npm install && npm start && mv temp_frontend frontend"
