--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,6 @@
   "name": "backend",     
   "version": "1.0.0",
   "scripts": {
-    "start": "node index.js"  
+    "start": "node backend/index.js"  
   }
 }
